# MySQLConnect

./: CMakeLists.txt  Makefile  MySQLConnect.c  MySQLConnect.h  mingw.cmake  test.c
mysqlclient/MacOS/include/: config.h  mysql_version.h
mysqlclient/MacOS/include/ndb/: ndb_types.h  ndb_version.h
